--- a/31_DOM_projects/2-BMI-calculator/style.css
+++ b/31_DOM_projects/2-BMI-calculator/style.css
@@ -46,20 +46,13 @@ body{
     font-size: 30px;
     
 }
-.p{
-    width: 100vw;
-    height: 10vh;
-    background-color: white; 
-    margin-top: 3px;
-    padding-top: 20px;
-    border-radius: 20px;
-    padding-left: 5px;
-}
-a{
-    background-color: aliceblue;
+#calculate{
+    margin-left: 90px;
+    padding:5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 5px;
+    background-color: antiquewhite;
     text-decoration: none;
-    color: black;
     text-transform: capitalize;
-    color: black;
-    font-weight: bolder;
 }
