--- a/31_DOM_projects/3-digital-clock/style.css
+++ b/31_DOM_projects/3-digital-clock/style.css
@@ -46,20 +46,21 @@ body{
     font-size: 30px;
     
 }
-.p{
+#box2{
     width: 100vw;
-    height: 10vh;
-    background-color: white; 
-    margin-top: 3px;
-    padding-top: 20px;
-    border-radius: 20px;
-    padding-left: 5px;
+    height: 60vh;
+    background-color: blue;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
 }
-a{
-    background-color: aliceblue;
-    text-decoration: none;
-    color: black;
-    text-transform: capitalize;
-    color: black;
-    font-weight: bolder;
+#time{
+    width: 100%;
+    height: 40px;
+    background-color: darkorange;
+    border-radius: 8px;
+    padding: 10px;
+    margin-top: 10px;
+
 }
